@@ -44,6 +44,7 @@ t/cmt.ini
 t/en.ini
 t/es.ini
 t/lib/Config/IniFiles/Debug.pm
+t/lib/Config/IniFiles/TestPaths.pm
 t/non-contiguous-groups.ini
 t/pod-coverage.t
 t/pod.t
