@@ -10,10 +10,9 @@ use File::Spec;
 
 use Config::IniFiles;
 
-sub t_file
-{
-    return File::Spec->catfile(File::Spec->curdir(), "t", @_);
-}
+use lib "./t/lib";
+
+use Config::IniFiles::TestPaths;
 
 my ($en, $ini, $success);
 
